fixed blurry image

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -20,9 +20,16 @@ body {
 
 .header-wrapper {
     height: 100vh;
-    background: rgb(255, 0, 0)url(../img/photo-1477346611705-65d1883cee1e.avif) center center / cover no-repeat fixed;
+    background: rgb(255, 0, 0)url(../img/photo-1656788519906-b9becc2a6833.avif) center center / cover no-repeat fixed;
     width: 100%;
 }
+
+.overlay {
+    height: 100vh;
+    background: rgb(20 24 28 / .75);
+    width: 100%;
+}
+
 
 /* ---------------------------------------------------- */
 /* Header
